<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".After_Scan_Activity"
    android:background="#BDDF46">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="500dp"
        android:contextClickable="true"
        android:text="@string/location"
        android:id="@+id/location"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="450dp"
        android:contextClickable="true"
        android:text="@string/greenE_Zone"
        android:id="@+id/greenE_Zone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="400dp"
        android:contextClickable="true"
        android:text="@string/information_cell"
        android:id="@+id/information_cell"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="350dp"
        android:contextClickable="true"
        android:text="@string/about_us"
        android:id="@+id/about_us"/>


</RelativeLayout>