<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BDDF46"
        android:orientation="vertical"
        tools:context=".AfterProfileActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="334dp"
            android:text="@string/profile_dashboard"
            android:id="@+id/dashboard"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="236dp"
            android:text="@string/rewards"
            android:id="@+id/rewards"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="138dp"
            android:text="@string/withdraw"
            android:id="@+id/withdraw"/>


</RelativeLayout>